--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wishlist",
+  "name": "blockchaintracking",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.3.0",
